rspec-tools/tests/resources/invalid-rules/S200/cpp/rule.adoc
== Resources
=== Documentation
=== Articles & Blog Posts
=== Conference Presentations
=== Standards
=== Yolo
